state/forge_phaseR_r049_bf16_2026_05_17/build_layercast.log
r049_layercast_linear.cu(186): warning #2506-D: a user-provided literal suffix must begin with "_"
      uint64_t st = 0x1ayercas7ULL ^ (uint64_t)(M * 1000003 + K * 1009 + N * 31);
                    ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

r049_layercast_linear.cu(186): error: user-defined literal operator not found
      uint64_t st = 0x1ayercas7ULL ^ (uint64_t)(M * 1000003 + K * 1009 + N * 31);
                    ^

1 error detected in the compilation of "r049_layercast_linear.cu".
